[TIMOB-1510] First refactor for Native Camera App Support