@@ -32,6 +32,7 @@ import org.appcelerator.titanium.TiBlob;
 import org.appcelerator.titanium.TiC;
 import org.appcelerator.titanium.TiContext;
 import org.appcelerator.titanium.io.TiBaseFile;
+import org.appcelerator.titanium.io.TiFile;
 import org.appcelerator.titanium.io.TiFileFactory;
 import org.appcelerator.titanium.proxy.TiViewProxy;
 import org.appcelerator.titanium.util.TiActivityResultHandler;
@@ -142,217 +143,333 @@ public class MediaModule extends KrollModule
 			vibrator.vibrate(pattern, -1);
 		}
 	}
+	
+	private int getLastImageId(Activity activity){
+	    final String[] imageColumns = { MediaStore.Images.Media._ID };
+	    final String imageOrderBy = MediaStore.Images.Media._ID+" DESC";
+	    final String imageWhere = null;
+	    final String[] imageArguments = null;
+	    
+	    Cursor imageCursor = activity.getContentResolver().query(MediaStore.Images.Media.EXTERNAL_CONTENT_URI, imageColumns, imageWhere, imageArguments, imageOrderBy);
+	    if(imageCursor == null) {
+	    	return -1;
+	    }
+	    if(imageCursor.moveToFirst()){
+	        int id = imageCursor.getInt(imageCursor.getColumnIndex(MediaStore.Images.Media._ID));
+	        imageCursor.close();
+	        return id;
+	    }else{
+	        return 0;
+	    }
+	}
+	
+	private void launchNativeCamera(KrollDict cameraOptions)
+	{
+		KrollFunction successCallback = null;
+		KrollFunction cancelCallback = null;
+		KrollFunction errorCallback = null;
+		boolean saveToPhotoGallery = false;
+		
+		if (cameraOptions.containsKeyAndNotNull("success")) {
+			successCallback = (KrollFunction) cameraOptions.get("success");
+		}
+		if (cameraOptions.containsKeyAndNotNull("cancel")) {
+			cancelCallback = (KrollFunction) cameraOptions.get("cancel");
+		}
+		if (cameraOptions.containsKeyAndNotNull("error")) {
+			errorCallback = (KrollFunction) cameraOptions.get("error");
+		}
+		if (cameraOptions.containsKeyAndNotNull("saveToPhotoGallery")) {
+			saveToPhotoGallery = cameraOptions.getBoolean("saveToPhotoGallery");
+		}
+		
+		
+		//Create an output file irrespective of whether saveToGallery 
+		//is true or false. If false, we'll delete it later
+		File imageFile = null;
+		
+		if(saveToPhotoGallery) {
+			imageFile = MediaModule.createGalleryImageFile();
+		} else {
+			imageFile = MediaModule.createExternalStorageFile();
+		}
+		
+		//Sanity Checks
+		if (imageFile == null) {
+			if(errorCallback != null) {
+				KrollDict response = new KrollDict();
+				response.putCodeAndMessage(NO_CAMERA, "Unable to create file for storage");
+				errorCallback.callAsync(getKrollObject(), response);
+			}
+			return;
+		}
+		
+		if(getIsCameraSupported() == false) {
+			if(errorCallback != null) {
+				KrollDict response = new KrollDict();
+				response.putCodeAndMessage(UNKNOWN_ERROR, "Camera Not Supported");
+				errorCallback.callAsync(getKrollObject(), response);
+			}
+			Log.e(TAG, "Camera not supported");
+			imageFile.delete();
+			return;
+		}
+		
+		//Create Intent
+		Uri fileUri = Uri.fromFile(imageFile); // create a file to save the image
+	    Intent intent = new Intent(MediaStore.ACTION_IMAGE_CAPTURE);
+		intent.putExtra(MediaStore.EXTRA_OUTPUT, fileUri);
+		
+		//Setup CameraResultHandler
+		Activity activity = TiApplication.getInstance().getCurrentActivity();
+		TiActivitySupport activitySupport = (TiActivitySupport) activity;
+
+		CameraResultHandler resultHandler = new CameraResultHandler();
+		resultHandler.imageFile = imageFile;
+		resultHandler.successCallback = successCallback;
+		resultHandler.errorCallback = errorCallback;
+		resultHandler.cancelCallback = cancelCallback;
+		resultHandler.cameraIntent = intent;
+		resultHandler.saveToPhotoGallery = saveToPhotoGallery;
+		resultHandler.activitySupport = activitySupport;
+		resultHandler.lastImageId = getLastImageId(activity);
+		activity.runOnUiThread(resultHandler);
+		
+		
+	}
+	
+	
+	protected void launchCameraActivity(KrollDict cameraOptions) {
+		
+	}
 
 	@Kroll.method
 	public void showCamera(@SuppressWarnings("rawtypes") HashMap options)
 	{
-		Activity activity = TiApplication.getInstance().getCurrentActivity();
-
-		Log.d(TAG, "showCamera called", Log.DEBUG_MODE);
-
-		KrollFunction successCallback = null;
-		KrollFunction cancelCallback = null;
-		KrollFunction errorCallback = null;
-		boolean autohide = true;
-		int flashMode = CAMERA_FLASH_OFF;
-		boolean saveToPhotoGallery = false;
-
-		if (options.containsKey("success")) {
-			successCallback = (KrollFunction) options.get("success");
-		}
-		if (options.containsKey("cancel")) {
-			cancelCallback = (KrollFunction) options.get("cancel");
-		}
-		if (options.containsKey("error")) {
-			errorCallback = (KrollFunction) options.get("error");
-		}
-
-		Object autohideOption = options.get("autohide");
-		if (autohideOption != null) {
-			autohide = TiConvert.toBoolean(autohideOption);
-		}
-
-		Object saveToPhotoGalleryOption = options.get("saveToPhotoGallery");
-		if (saveToPhotoGalleryOption != null) {
-			saveToPhotoGallery = TiConvert.toBoolean(saveToPhotoGalleryOption);
+		KrollDict cameraOptions = null;
+		if ( (options == null) || !(options instanceof HashMap<?, ?>) ) {
+			if (Log.isDebugModeEnabled()) {
+				Log.d(TAG, "showCamera called with invalid options", Log.DEBUG_MODE);
+			}
+			return;
+		} else {
+			cameraOptions = new KrollDict(options);
 		}
 		
-		Object cameraFlashModeOption = options.get(TiC.PROPERTY_FLASH_MODE);
-		if (cameraFlashModeOption != null) {
-			flashMode = TiConvert.toInt(cameraFlashModeOption);
-		}
-
-		// Use our own custom camera activity when an overlay is provided.
-		if (options.containsKey("overlay")) {
-			TiCameraActivity.overlayProxy = (TiViewProxy) options
-					.get("overlay");
-
-			TiCameraActivity.callbackContext = getKrollObject();
-			TiCameraActivity.successCallback = successCallback;
-			TiCameraActivity.errorCallback = errorCallback;
-			TiCameraActivity.cancelCallback = cancelCallback;
-			TiCameraActivity.saveToPhotoGallery = saveToPhotoGallery;
-			TiCameraActivity.setFlashMode(flashMode);
-			TiCameraActivity.whichCamera = CAMERA_REAR; // default.
-
-			// This option is only applicable when running the custom
-			// TiCameraActivity, since we can't direct the built-in
-			// Activity to open a specific camera.
-			Object whichCamera = options.get("whichCamera");
-			if (whichCamera != null) {
-				TiCameraActivity.whichCamera = TiConvert.toInt(whichCamera);
-			}
-			TiCameraActivity.autohide = autohide;
-
-			Intent intent = new Intent(activity, TiCameraActivity.class);
-			activity.startActivity(intent);
-			return;
-		}
-
-		Camera camera = null;
-		try {
-			camera = Camera.open();
-			if (camera != null) {
-				camera.release();
-				camera = null;
-			}
-
-		} catch (Throwable t) {
-			if (camera != null) {
-				camera.release();
-			}
-
-			if (errorCallback != null) {
-				errorCallback.call(
-						getKrollObject(),
-						new Object[] { createErrorResponse(NO_CAMERA,
-								"Camera not available.") });
-			}
-
-			return;
-		}
-
-		TiActivitySupport activitySupport = (TiActivitySupport) activity;
-		TiFileHelper tfh = TiFileHelper.getInstance();
-
-		TiIntentWrapper cameraIntent = new TiIntentWrapper(new Intent());
-		if (TiCameraActivity.overlayProxy == null) {
-			cameraIntent.getIntent().setAction(
-					MediaStore.ACTION_IMAGE_CAPTURE);
-			cameraIntent.getIntent().addCategory(Intent.CATEGORY_DEFAULT);
+		if (cameraOptions.containsKeyAndNotNull("overlay")) {
+			launchCameraActivity(cameraOptions);
 		} else {
-			cameraIntent.getIntent().setClass(
-					TiApplication.getInstance().getBaseContext(),
-					TiCameraActivity.class);
+			launchNativeCamera(cameraOptions);
 		}
-
-		cameraIntent.setWindowId(TiIntentWrapper.createActivityName("CAMERA"));
-		PackageManager pm = (PackageManager) activity.getPackageManager();
-		List<ResolveInfo> activities = pm.queryIntentActivities(
-				cameraIntent.getIntent(), PackageManager.MATCH_DEFAULT_ONLY);
-
-		// See if it's the HTC camera app
-		boolean isHTCCameraApp = false;
-
-		for (ResolveInfo rs : activities) {
-			try {
-				if (rs.activityInfo.applicationInfo.sourceDir.contains("HTC")
-						|| Build.MANUFACTURER.equals("HTC")) {
-					isHTCCameraApp = true;
-					break;
-				}
-			} catch (NullPointerException e) {
-				// Ignore
-			}
-		}
-
-		File imageDir = null;
-		File imageFile = null;
-
-		try {
-			if (saveToPhotoGallery) {
-				// HTC camera application will create its own gallery image
-				// file.
-				if (!isHTCCameraApp) {
-					imageFile = createGalleryImageFile();
-				}
-
-			} else {
-				if (activity.getIntent() != null) {
-					String name = TiApplication.getInstance().getAppInfo()
-							.getName();
-					// For HTC cameras, specifying the directory from
-					// getExternalStorageDirectory is /mnt/sdcard and
-					// using that path prevents the gallery from recognizing it.
-					// To avoid this we use /sdcard instead
-					// (this is a legacy path we've been using)
-					if (isHTCCameraApp) {
-						imageDir = new File(PHOTO_DCIM_CAMERA, name);
-					} else {
-						File rootsd = Environment.getExternalStorageDirectory();
-						imageDir = new File(rootsd.getAbsolutePath()
-								+ "/dcim/Camera/", name);
-					}
-					if (!imageDir.exists()) {
-						imageDir.mkdirs();
-						if (!imageDir.exists()) {
-							Log.w(TAG,
-									"Attempt to create '"
-											+ imageDir.getAbsolutePath()
-											+ "' failed silently.");
-						}
-					}
-
-				} else {
-					imageDir = tfh.getDataDirectory(false);
-				}
-
-				imageFile = tfh.getTempFile(imageDir, ".jpg", true);
-			}
-
-		} catch (IOException e) {
-			Log.e(TAG, "Unable to create temp file", e);
-			if (errorCallback != null) {
-				errorCallback.callAsync(getKrollObject(),
-						createErrorResponse(UNKNOWN_ERROR, e.getMessage()));
-			}
-
-			return;
-		}
-
-		// Get the taken date for the last image in EXTERNAL_CONTENT_URI.
-		String[] projection = {
-			Images.ImageColumns.DATE_TAKEN
-		};
-		String dateTaken = null;
-		Cursor c = activity.getContentResolver().query(Images.Media.EXTERNAL_CONTENT_URI, projection, null, null,
-				Images.ImageColumns.DATE_TAKEN);
-		if (c != null) {
-			if (c.moveToLast()) {
-				dateTaken = c.getString(0);
-			}
-			c.close();
-			c = null;
-		}
-
-		CameraResultHandler resultHandler = new CameraResultHandler();
-		resultHandler.imageFile = imageFile;
-		resultHandler.saveToPhotoGallery = saveToPhotoGallery;
-		resultHandler.successCallback = successCallback;
-		resultHandler.cancelCallback = cancelCallback;
-		resultHandler.errorCallback = errorCallback;
-		resultHandler.activitySupport = activitySupport;
-		resultHandler.cameraIntent = cameraIntent.getIntent();
-		resultHandler.dateTaken_lastImageInExternalContentURI = dateTaken;
-
-		if (imageFile != null) {
-			String imageUrl = "file://" + imageFile.getAbsolutePath();
-			cameraIntent.getIntent().putExtra(MediaStore.EXTRA_OUTPUT,
-					Uri.parse(imageUrl));
-			resultHandler.imageUrl = imageUrl;
-		}
-
-		activity.runOnUiThread(resultHandler);
+		
+		
+//		Activity activity = TiApplication.getInstance().getCurrentActivity();
+//
+//		Log.d(TAG, "showCamera called", Log.DEBUG_MODE);
+//
+//		KrollFunction successCallback = null;
+//		KrollFunction cancelCallback = null;
+//		KrollFunction errorCallback = null;
+//		boolean autohide = true;
+//		int flashMode = CAMERA_FLASH_OFF;
+//		boolean saveToPhotoGallery = false;
+//
+//		if (options.containsKey("success")) {
+//			successCallback = (KrollFunction) options.get("success");
+//		}
+//		if (options.containsKey("cancel")) {
+//			cancelCallback = (KrollFunction) options.get("cancel");
+//		}
+//		if (options.containsKey("error")) {
+//			errorCallback = (KrollFunction) options.get("error");
+//		}
+//
+//		Object autohideOption = options.get("autohide");
+//		if (autohideOption != null) {
+//			autohide = TiConvert.toBoolean(autohideOption);
+//		}
+//
+//		Object saveToPhotoGalleryOption = options.get("saveToPhotoGallery");
+//		if (saveToPhotoGalleryOption != null) {
+//			saveToPhotoGallery = TiConvert.toBoolean(saveToPhotoGalleryOption);
+//		}
+//		
+//		Object cameraFlashModeOption = options.get(TiC.PROPERTY_FLASH_MODE);
+//		if (cameraFlashModeOption != null) {
+//			flashMode = TiConvert.toInt(cameraFlashModeOption);
+//		}
+//
+//		// Use our own custom camera activity when an overlay is provided.
+//		if (options.containsKey("overlay")) {
+//			TiCameraActivity.overlayProxy = (TiViewProxy) options
+//					.get("overlay");
+//
+//			TiCameraActivity.callbackContext = getKrollObject();
+//			TiCameraActivity.successCallback = successCallback;
+//			TiCameraActivity.errorCallback = errorCallback;
+//			TiCameraActivity.cancelCallback = cancelCallback;
+//			TiCameraActivity.saveToPhotoGallery = saveToPhotoGallery;
+//			TiCameraActivity.setFlashMode(flashMode);
+//			TiCameraActivity.whichCamera = CAMERA_REAR; // default.
+//
+//			// This option is only applicable when running the custom
+//			// TiCameraActivity, since we can't direct the built-in
+//			// Activity to open a specific camera.
+//			Object whichCamera = options.get("whichCamera");
+//			if (whichCamera != null) {
+//				TiCameraActivity.whichCamera = TiConvert.toInt(whichCamera);
+//			}
+//			TiCameraActivity.autohide = autohide;
+//
+//			Intent intent = new Intent(activity, TiCameraActivity.class);
+//			activity.startActivity(intent);
+//			return;
+//		}
+//
+//		Camera camera = null;
+//		try {
+//			camera = Camera.open();
+//			if (camera != null) {
+//				camera.release();
+//				camera = null;
+//			}
+//
+//		} catch (Throwable t) {
+//			if (camera != null) {
+//				camera.release();
+//			}
+//
+//			if (errorCallback != null) {
+//				errorCallback.call(
+//						getKrollObject(),
+//						new Object[] { createErrorResponse(NO_CAMERA,
+//								"Camera not available.") });
+//			}
+//
+//			return;
+//		}
+//
+//		TiActivitySupport activitySupport = (TiActivitySupport) activity;
+//		TiFileHelper tfh = TiFileHelper.getInstance();
+//
+//		TiIntentWrapper cameraIntent = new TiIntentWrapper(new Intent());
+//		if (TiCameraActivity.overlayProxy == null) {
+//			cameraIntent.getIntent().setAction(
+//					MediaStore.ACTION_IMAGE_CAPTURE);
+//			cameraIntent.getIntent().addCategory(Intent.CATEGORY_DEFAULT);
+//		} else {
+//			cameraIntent.getIntent().setClass(
+//					TiApplication.getInstance().getBaseContext(),
+//					TiCameraActivity.class);
+//		}
+//
+//		cameraIntent.setWindowId(TiIntentWrapper.createActivityName("CAMERA"));
+//		PackageManager pm = (PackageManager) activity.getPackageManager();
+//		List<ResolveInfo> activities = pm.queryIntentActivities(
+//				cameraIntent.getIntent(), PackageManager.MATCH_DEFAULT_ONLY);
+//
+//		// See if it's the HTC camera app
+//		boolean isHTCCameraApp = false;
+//
+//		for (ResolveInfo rs : activities) {
+//			try {
+//				if (rs.activityInfo.applicationInfo.sourceDir.contains("HTC")
+//						|| Build.MANUFACTURER.equals("HTC")) {
+//					isHTCCameraApp = true;
+//					break;
+//				}
+//			} catch (NullPointerException e) {
+//				// Ignore
+//			}
+//		}
+//
+//		File imageDir = null;
+//		File imageFile = null;
+//
+//		try {
+//			if (saveToPhotoGallery) {
+//				// HTC camera application will create its own gallery image
+//				// file.
+//				if (!isHTCCameraApp) {
+//					imageFile = createGalleryImageFile();
+//				}
+//
+//			} else {
+//				if (activity.getIntent() != null) {
+//					String name = TiApplication.getInstance().getAppInfo()
+//							.getName();
+//					// For HTC cameras, specifying the directory from
+//					// getExternalStorageDirectory is /mnt/sdcard and
+//					// using that path prevents the gallery from recognizing it.
+//					// To avoid this we use /sdcard instead
+//					// (this is a legacy path we've been using)
+//					if (isHTCCameraApp) {
+//						imageDir = new File(PHOTO_DCIM_CAMERA, name);
+//					} else {
+//						File rootsd = Environment.getExternalStorageDirectory();
+//						imageDir = new File(rootsd.getAbsolutePath()
+//								+ "/dcim/Camera/", name);
+//					}
+//					if (!imageDir.exists()) {
+//						imageDir.mkdirs();
+//						if (!imageDir.exists()) {
+//							Log.w(TAG,
+//									"Attempt to create '"
+//											+ imageDir.getAbsolutePath()
+//											+ "' failed silently.");
+//						}
+//					}
+//
+//				} else {
+//					imageDir = tfh.getDataDirectory(false);
+//				}
+//
+//				imageFile = tfh.getTempFile(imageDir, ".jpg", true);
+//			}
+//
+//		} catch (IOException e) {
+//			Log.e(TAG, "Unable to create temp file", e);
+//			if (errorCallback != null) {
+//				errorCallback.callAsync(getKrollObject(),
+//						createErrorResponse(UNKNOWN_ERROR, e.getMessage()));
+//			}
+//
+//			return;
+//		}
+//
+//		// Get the taken date for the last image in EXTERNAL_CONTENT_URI.
+//		String[] projection = {
+//			Images.ImageColumns.DATE_TAKEN
+//		};
+//		String dateTaken = null;
+//		Cursor c = activity.getContentResolver().query(Images.Media.EXTERNAL_CONTENT_URI, projection, null, null,
+//				Images.ImageColumns.DATE_TAKEN);
+//		if (c != null) {
+//			if (c.moveToLast()) {
+//				dateTaken = c.getString(0);
+//			}
+//			c.close();
+//			c = null;
+//		}
+//
+//		CameraResultHandler resultHandler = new CameraResultHandler();
+//		resultHandler.imageFile = imageFile;
+//		resultHandler.saveToPhotoGallery = saveToPhotoGallery;
+//		resultHandler.successCallback = successCallback;
+//		resultHandler.cancelCallback = cancelCallback;
+//		resultHandler.errorCallback = errorCallback;
+//		resultHandler.activitySupport = activitySupport;
+//		resultHandler.cameraIntent = cameraIntent.getIntent();
+//		resultHandler.dateTaken_lastImageInExternalContentURI = dateTaken;
+//
+//		if (imageFile != null) {
+//			String imageUrl = "file://" + imageFile.getAbsolutePath();
+//			cameraIntent.getIntent().putExtra(MediaStore.EXTRA_OUTPUT,
+//					Uri.parse(imageUrl));
+//			resultHandler.imageUrl = imageUrl;
+//		}
+//
+//		activity.runOnUiThread(resultHandler);
 	}
 
 	@Kroll.method
@@ -405,7 +522,28 @@ public class MediaModule extends KrollModule
 		return super.handleMessage(message);
 	}
 
-	public static File createGalleryImageFile() {
+	protected static File createExternalStorageFile() {
+		File pictureDir = TiApplication.getInstance().getExternalFilesDir(Environment.DIRECTORY_PICTURES);
+		File appPictureDir = new File(pictureDir, TiApplication.getInstance().getAppInfo().getName());
+		if (!appPictureDir.exists()) {
+			if (!appPictureDir.mkdirs()) {
+				Log.e(TAG, "Failed to create external storage directory.");
+				return null;
+			}
+		}
+
+		File imageFile;
+		try {
+			imageFile = TiFileHelper.getInstance().getTempFile(appPictureDir, ".jpg", false);
+
+		} catch (IOException e) {
+			Log.e(TAG, "Failed to create image file: " + e.getMessage());
+			return null;
+		}
+
+		return imageFile;
+	}
+	protected static File createGalleryImageFile() {
 		File pictureDir = Environment.getExternalStoragePublicDirectory(Environment.DIRECTORY_PICTURES);
 		File appPictureDir = new File(pictureDir, TiApplication.getInstance().getAppInfo().getName());
 		if (!appPictureDir.exists()) {
@@ -460,7 +598,7 @@ public class MediaModule extends KrollModule
 		protected KrollFunction successCallback, cancelCallback, errorCallback;
 		protected TiActivitySupport activitySupport;
 		protected Intent cameraIntent;
-		protected String dateTaken_lastImageInExternalContentURI;
+		protected int lastImageId;
 
 		@Override
 		public void run()
@@ -468,212 +606,167 @@ public class MediaModule extends KrollModule
 			code = activitySupport.getUniqueResultCode();
 			activitySupport.launchActivityForResult(cameraIntent, code, this);
 		}
+		
+		private void validateFile() throws Throwable
+		{
+			try {
+				BitmapFactory.Options opts = new BitmapFactory.Options();
+				opts.inJustDecodeBounds = true;
+				
+				BitmapFactory.decodeStream(new FileInputStream(imageFile), null, opts);
+				if (opts.outWidth == -1 || opts.outHeight == -1) {
+					throw new Exception("Could not decode the bitmap from imageFile");
+				}
+			} catch (Throwable t) {
+				Log.e(TAG, t.getMessage());
+				throw t;
+			}
+		}
+		
+		private void checkAndDeleteDuplicate(Activity activity)
+		{
+			if(lastImageId != -1) {
+				final String[] imageColumns = { MediaStore.Images.Media.DATA, MediaStore.Images.Media.DATE_TAKEN, MediaStore.Images.Media.SIZE, MediaStore.Images.Media._ID };
+				final String imageOrderBy = MediaStore.Images.Media._ID+" DESC";
+				final String imageWhere = MediaStore.Images.Media._ID+">?";
+				final String[] imageArguments = { Integer.toString(lastImageId) };
+				Cursor imageCursor = activity.getContentResolver().query(MediaStore.Images.Media.EXTERNAL_CONTENT_URI, imageColumns, imageWhere, imageArguments, imageOrderBy);
+				String refPath = imageFile.getAbsolutePath();
+				long lastModifiedTime = imageFile.lastModified();
+				if (imageCursor == null) {
+					Log.e(TAG, "Could not load image cursor. Can not check and delete duplicates");
+					return;
+				}
+				if(imageCursor.getCount()>0){
+					//This should just be 1. The extra time check is for the case when user starts camera, pauses app,
+					// goes to native camera and takes pictures and returns.
+				    while(imageCursor.moveToNext()){
+				        int id = imageCursor.getInt(imageCursor.getColumnIndex(MediaStore.Images.Media._ID));
+				        String path = imageCursor.getString(imageCursor.getColumnIndex(MediaStore.Images.Media.DATA));
+				        if(!path.equalsIgnoreCase(refPath)) {
+					        long takenTimeStamp = imageCursor.getLong(imageCursor.getColumnIndex(MediaStore.Images.Media.DATE_TAKEN));
+					        if (Math.abs(takenTimeStamp - lastModifiedTime) < 2000) {
+					        	//Files created within 1 second of each other
+						        int result = activity.getContentResolver().delete(MediaStore.Images.Media.EXTERNAL_CONTENT_URI, MediaStore.Images.Media._ID + "=?", new String[]{ Integer.toString(id) } );
+					        	if (result == 1) {
+					        		if(Log.isDebugModeEnabled()) {
+						        		Log.d(TAG, "Deleting possible duplicate at "+path+" with id "+id, Log.DEBUG_MODE);
+					        		}
+						        } else {
+						        	if(Log.isDebugModeEnabled()) {
+						        		Log.d(TAG, "Could not delete possible duplicate at "+path+" with id "+id, Log.DEBUG_MODE);
+						        	}
+						        }
+					        } else {
+					        	if(Log.isDebugModeEnabled()) {
+					        		Log.d(TAG, "Ignoring file as not a duplicate at path "+path+" with id "+id, Log.DEBUG_MODE);
+					        	}
+					        }
+				        }
+				    }               
+				}
+				imageCursor.close();
+			}
+		}
 
 		@Override
 		public void onResult(Activity activity, int requestCode, int resultCode, Intent data)
 		{
-			if (resultCode == Activity.RESULT_CANCELED) {
-				if (imageFile != null) {
-					imageFile.delete();
-				}
-				if (cancelCallback != null) {
-					KrollDict response = new KrollDict();
-					response.putCodeAndMessage(NO_ERROR, null);
-					cancelCallback.callAsync(getKrollObject(), response);
-				}
-
-			} else {
-				// If data is null, the image is not automatically saved to the gallery, so we need to process it with
-				// the one we created
-				if (data == null) {
-					processImage(activity);
-
-				} else {
-					// Get the content information about the saved image
-					String[] projection = {
-						Images.Media.TITLE,
-						Images.Media.DISPLAY_NAME,
-						Images.Media.MIME_TYPE,
-						Images.ImageColumns.BUCKET_ID,
-						Images.ImageColumns.BUCKET_DISPLAY_NAME,
-						MediaColumns.DATA,
-						Images.ImageColumns.DATE_TAKEN
-					};
-
-					String title = null;
-					String displayName = null;
-					String mimeType = null;
-					String bucketId = null;
-					String bucketDisplayName = null;
-					String dataPath = null;
-					String dateTaken = null;
-
-					Cursor c = null;
-					boolean isDataValid = true;
-					boolean isQueriedPhotoValid = true;
-					Uri uriData = data.getData();
-					if (uriData != null) {
-						c = activity.getContentResolver().query(uriData, projection, null, null, null);
+			if(requestCode == code) {
+				if (resultCode == Activity.RESULT_OK) {
+					try {
+						validateFile();
+					} catch(Throwable t) {
+						if(errorCallback != null) {
+							KrollDict response = new KrollDict();
+							response.putCodeAndMessage(UNKNOWN_ERROR, t.getMessage());
+							errorCallback.callAsync(getKrollObject(), response);
+						}
+						return;
 					}
-					if (c == null) {
-						c = activity.getContentResolver().query(Images.Media.EXTERNAL_CONTENT_URI, projection, null, null,
-							Images.ImageColumns.DATE_TAKEN);
-						isDataValid = false;
-					}
-					if (c != null) {
+					
+					checkAndDeleteDuplicate(activity);
+					
+					if (!saveToPhotoGallery) {
+						//Create a temporary file in cache and delete the original file
+						BufferedInputStream bis = null;
+						BufferedOutputStream bos = null;
 						try {
-							boolean isCursorValid = false;
-							if (uriData != null && isDataValid) {
-								isCursorValid = c.moveToNext();
-							} else {
-								isCursorValid = c.moveToLast();
-							}
-							if (isCursorValid) {
-								title = c.getString(0);
-								displayName = c.getString(1);
-								mimeType = c.getString(2);
-								bucketId = c.getString(3);
-								bucketDisplayName = c.getString(4);
-								dataPath = c.getString(5);
-								dateTaken = c.getString(6);
-								
-								if (!isDataValid && dateTaken.equals(dateTaken_lastImageInExternalContentURI)) {
-									isQueriedPhotoValid = false;
-								}
+							File tempFile = TiApplication.getInstance().getTempFileHelper().createTempFile("tia", ".jpg");
+							bis = new BufferedInputStream(new FileInputStream(imageFile));
+							bos = new BufferedOutputStream(new FileOutputStream(tempFile));
+							byte[] buf = new byte[8096];
+							int len = 0;
 
-								Log.d(TAG, "Image { title: " + title + " displayName: " + displayName + " mimeType: "
-									+ mimeType + " bucketId: " + bucketId + " bucketDisplayName: " + bucketDisplayName
-									+ " path: " + dataPath + " }", Log.DEBUG_MODE);
+							while ((len = bis.read(buf)) != -1) {
+								bos.write(buf, 0, len);
 							}
-						} finally {
-							c.close();
-							c = null;
+							
+							if (bis != null) {
+								bis.close();
+							}
+							if (bos != null) {
+								bos.close();
+							}
+							
+							imageFile.delete();
+							imageFile = tempFile;
+
+						} catch(Throwable t) {
+							if(errorCallback != null) {
+								KrollDict response = new KrollDict();
+								response.putCodeAndMessage(UNKNOWN_ERROR, t.getMessage());
+								errorCallback.callAsync(getKrollObject(), response);
+							}
+							return;
 						}
 					} else {
-						// If we can't get query the image, process it from the imageFile
-						processImage(activity);
-						return;
+						//Send out broadcast to add to image gallery
+						Intent mediaScanIntent = new Intent(Intent.ACTION_MEDIA_SCANNER_SCAN_FILE);
+						Uri contentUri = Uri.fromFile(imageFile);
+						mediaScanIntent.setData(contentUri);
+						activity.sendBroadcast(mediaScanIntent);
 					}
-					if (!isQueriedPhotoValid) {
-						// If the queried image is not the one we just captured, process it from the imageFile
-						processImage(activity);
-						return;
-					}
-
-					String localImageUrl = dataPath;
-					URL url;
+					
+					//Create a blob for response
 					try {
-						if (!saveToPhotoGallery) {
-							// We need to move the image from dataPath to the temp file which will be deleted
-							// when the app exits.
-							url = new URL(imageUrl);
-							moveImage(dataPath, url.getPath());
-
-							// Delete the saved the image entry from the gallery DB.
-							if (uriData != null && isDataValid) {
-								activity.getContentResolver().delete(uriData, null, null);
-							} else {
-								activity.getContentResolver().delete(Images.Media.EXTERNAL_CONTENT_URI, "datetaken = ?", new String[] { dateTaken });
-							}
-
-							localImageUrl = imageUrl; // make sure it's a good URL before setting it to pass back.
-						} else if (imageUrl != null) {
-							// Delete the temp file since we want to use the one from the photo gallery
-							url = new URL(imageUrl);
-							File source = new File(url.getPath());
-							source.delete();
+						TiFile theFile = new TiFile(imageFile, imageFile.toURI().toURL().toExternalForm(), false);
+						TiBlob theBlob = TiBlob.blobFromFile(theFile);
+						KrollDict response = MediaModule.createDictForImage(theBlob, theBlob.getMimeType());
+						if (successCallback != null) {
+							successCallback.callAsync(getKrollObject(), response);
 						}
-					} catch (MalformedURLException e) {
-						Log.e(TAG, "Invalid URL not moving image: " + e.getMessage());
-
+					} catch (Throwable t) {
+						if(errorCallback != null) {
+							KrollDict response = new KrollDict();
+							response.putCodeAndMessage(UNKNOWN_ERROR, t.getMessage());
+							errorCallback.callAsync(getKrollObject(), response);
+						}
+						return;
 					}
-					invokeSuccessCallback(activity, localImageUrl);
-				}
-			}
-		}
-
-		private void moveImage(String source, String dest)
-		{
-			try {
-
-				BufferedInputStream bis = null;
-				BufferedOutputStream bos = null;
-
-				File src = new File(source);
-				File dst = new File(dest);
-
-				try {
-					bis = new BufferedInputStream(new FileInputStream(src), 8096);
-					bos = new BufferedOutputStream(new FileOutputStream(dst), 8096);
-
-					byte[] buf = new byte[8096];
-					int len = 0;
-
-					while ((len = bis.read(buf)) != -1) {
-						bos.write(buf, 0, len);
+					
+				} else {
+					//Delete the file
+					if (imageFile != null) {
+						imageFile.delete();
 					}
-
-				} finally {
-					if (bis != null) {
-						bis.close();
-					}
-
-					if (bos != null) {
-						bos.close();
+					if (resultCode == Activity.RESULT_CANCELED) {
+						if (cancelCallback != null) {
+							KrollDict response = new KrollDict();
+							response.putCodeAndMessage(NO_ERROR, null);
+							cancelCallback.callAsync(getKrollObject(), response);
+						}
+					} else {
+						//Assume error
+						if(errorCallback != null) {
+							KrollDict response = new KrollDict();
+							response.putCodeAndMessage(UNKNOWN_ERROR, null);
+							errorCallback.callAsync(getKrollObject(), response);
+						}
 					}
 				}
-				src.delete();
-
-			} catch (IOException e) {
-				Log.e(TAG, "Unable to move file: " + e.getMessage(), e);
 			}
-		}
-
-		@SuppressLint("DefaultLocale")
-		private void processImage(Activity activity)
-		{
-			String localUrl = imageUrl;
-			String localPath = imageFile.getAbsolutePath();
-
-			if (saveToPhotoGallery) {
-				ContentValues values = new ContentValues(7);
-				values.put(Images.Media.TITLE, imageFile.getName());
-				values.put(Images.Media.DISPLAY_NAME, imageFile.getName());
-				values.put(Images.Media.DATE_TAKEN, new Date().getTime());
-				values.put(Images.Media.MIME_TYPE, "image/jpeg");
-
-				File rootsd = Environment.getExternalStorageDirectory();
-				localPath = rootsd.getAbsolutePath() + "/dcim/Camera/" + imageFile.getName();
-				values.put(Images.ImageColumns.BUCKET_ID, localPath.toLowerCase().hashCode());
-				values.put(Images.ImageColumns.BUCKET_DISPLAY_NAME, "Camera");
-				moveImage(imageFile.getAbsolutePath(), localPath);
-				localUrl = "file://" + localPath;
-
-				values.put("_data", localPath);
-
-				activity.getContentResolver().insert(Images.Media.EXTERNAL_CONTENT_URI, values);
-
-				// puts newly captured photo into the gallery
-				MediaScannerClient mediaScanner = new MediaScannerClient(activity, new String[] { localUrl }, null, null);
-				mediaScanner.scan();
-			}
-			invokeSuccessCallback(activity, localPath);
-		}
-
-		private void invokeSuccessCallback(Activity activity, String localImageUrl)
-		{
-			try {
-				if (successCallback != null) {
-					invokeCallback((TiBaseActivity) activity, successCallback, getKrollObject(), createDictForImage(localImageUrl, "image/jpeg"));
-				}
-
-			} catch (OutOfMemoryError e) {
-				String msg = "Not enough memory to get image: " + e.getMessage();
-				Log.e(TAG, msg);
-				if (errorCallback != null) {
-					invokeCallback((TiBaseActivity) activity, errorCallback, getKrollObject(), createErrorResponse(UNKNOWN_ERROR, msg));
-				}
-			}
+			
 		}
 
 		@Override
